[package]
name = "pass3d-pool"
version = "0.2.2"
authors = ["3Dpass"]
edition = "2021"

[dependencies]
rayon = "1.5.1"
structopt = "0.3.13"
anyhow = "1"
serde = { version = "1.0", default-features = false }
serde_json = { version = "1" }
futures = "0.3"
sha3 = "0.10.7"
tokio = { version = "1.25", features = ["macros", "rt-multi-thread"], default-features = false }
jsonrpsee = { version = "0.18.0", features = ["server", "client"] }
codec = { package = "parity-scale-codec", version = "3.1", default-features = false, features = ["derive"] }
primitive-types = { version = "0.11", default-features = false, features = ["serde"] }
ecies-ed25519 = { version = "0.5" }
rand = "0.7.3"
schnorrkel = { version = "0.10" }
hex = "0.4"
ed25519_to_curve25519 = "0.2"
tiny-bip39 = "1.0.0"
substrate-bip39 = "0.4"
genmesh = "0.6.2"
cgmath = "0.18.0"
ansi_term = "0.12.1"

p3d = { version="0.7.0", git="https://github.com/3Dpass/p3d", rev="b69e641f" }
